// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render NavigationBar Root - Loading 1`] = `
<ol
  className="navbar-container breadcrumb"
  style={
    Object {
      "left": "0px",
      "position": "absolute",
      "right": "0px",
      "zIndex": 1000,
    }
  }
>
  <li>
    <a
      onClick={[Function]}
      role="button"
      title="Reload"
    >
      <i
        className="fa fa-refresh loader"
      />
    </a>
  </li>
  <li
    className={null}
    style={Object {}}
  >
    <span>
      <a
        href="/"
        onClick={[Function]}
      >
        <i
          className="fa fa-home fa-lg"
        />
      </a>
    </span>
  </li>
  <li
    className="navbar-element"
    style={
      Object {
        "flex-basis": "100%",
      }
    }
  >
    <span>
      content
    </span>
  </li>
</ol>
`;

exports[`Render NavigationBar Root 1`] = `
<ol
  className="navbar-container breadcrumb"
  style={
    Object {
      "left": "0px",
      "position": "absolute",
      "right": "0px",
      "zIndex": 1000,
    }
  }
>
  <li>
    <a
      onClick={[Function]}
      role="button"
      title="Reload"
    >
      <i
        className="fa fa-refresh"
      />
    </a>
  </li>
  <li
    className={null}
    style={Object {}}
  >
    <span>
      <a
        href="/"
        onClick={[Function]}
      >
        <i
          className="fa fa-home fa-lg"
        />
      </a>
    </span>
  </li>
  <li
    className="navbar-element"
    style={
      Object {
        "flex-basis": "100%",
      }
    }
  >
    <span>
      content
    </span>
  </li>
</ol>
`;

exports[`Render NavigationBar Subfolder 1`] = `
<ol
  className="navbar-container breadcrumb"
  style={
    Object {
      "left": "0px",
      "position": "absolute",
      "right": "0px",
      "zIndex": 1000,
    }
  }
>
  <li>
    <a
      onClick={[Function]}
      role="button"
      title="Reload"
    >
      <i
        className="fa fa-refresh"
      />
    </a>
  </li>
  <li
    className={null}
    style={Object {}}
  >
    <span>
      <a
        href="/"
        onClick={[Function]}
      >
        <i
          className="fa fa-home fa-lg"
        />
      </a>
    </span>
  </li>
  <li
    className="navbar-element"
    style={Object {}}
  >
    <a
      href="/#/content"
      onClick={[Function]}
    >
      content
    </a>
  </li>
  <li
    className="navbar-element"
    style={Object {}}
  >
    <a
      href="/#/content/foo"
      onClick={[Function]}
    >
      foo
    </a>
  </li>
  <li
    className="navbar-element"
    style={
      Object {
        "flex-basis": "100%",
      }
    }
  >
    <span>
      bar
    </span>
  </li>
</ol>
`;
